[metadata]
name = pyv8
version = 1.0.0
description = Python bindings for the V8 JavaScript engine
long_description = file: README.md
long_description_content_type = text/markdown
author = conlin
author_email = 995018884@qq.com
url = https://github.com/ConlinH/pyv8
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: C++
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.10, <4
package_data =
    pyv8 = icudtl.dat, _pyv8.pyi, _pyv8.pyd, _pyv8.abi3.so

[options.packages.find]
exclude =
    tests

[tool:pytest]
testpaths = tests
python_files = test_*.py
